Sa 3 linije koda

--- a/BackendRVA/src/main/resources/application.properties
+++ b/BackendRVA/src/main/resources/application.properties
@@ -15,3 +15,8 @@ spring.datasource.password = postgres
 
 #port
 server.port=8083
+
+
+spring.jpa.hibernate.ddl-auto = create
+spring.datasource.initialization-mode = always
+spring.datasource.data=classpath:/sql/insertInto.sql
